--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+# Adding config.py file.
+config.py
+
+# Adding Additional Files
+API_practice.ipynb
+WeatherPy-Copy1.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
